--- a/appspec.yml
+++ b/appspec.yml
@@ -47,6 +47,7 @@ permissions:
   - object: /var/www/html/assets/uploads
     owner: apache
     group: apache
+    except: ["assets/uploads/.gitkeep"]
     mode: 550
     type:
       - file
